--- a/css/style.css
+++ b/css/style.css
@@ -88,7 +88,7 @@ span{
     text-decoration: none;
   }
   
- 
+ /* end header section */
 
 /* hero section */
 #hero{
@@ -196,6 +196,7 @@ span{
     color: white;
 
 }
+/* end hero sections */
 /* featur sections */
 .title{
     text-align: center;
@@ -236,6 +237,7 @@ span{
     margin-left: 30vh;
     cursor: pointer;
 }
+/* end featured section */
 /* about sections */
 .About-us .title{
     margin-top: 5vh;
@@ -271,14 +273,14 @@ span{
     width: 40%;
     margin-left: 30vh;
 }
-
+/* end about sections */
+/* contact section */
 .contacts .title{
     margin-top: 5vh;
 }
 .contacts .title h4{
     font-size: 5vh;
 }
-/* contact section */
 .infor{
     margin-left: 50vh;
     display: flex;
@@ -300,7 +302,7 @@ span{
     border: 1px solid green;
     border-radius: 2vh;
 }
-
+/*end contact sectiona */
 /* shop section */
 
 .shop .title h4{
@@ -329,13 +331,11 @@ span{
     font-size: 3vh;
     margin-top: 1vh;
 }
-
 #picture{
     width: 55vh;
     height: 40vh;
     border-radius: 2vh;
 }
-
 .des{
     border: 1px solid green;
     border-radius: 2vh;
@@ -359,8 +359,6 @@ span{
 }
 #description {
     margin-left: 3vh;
-}
-#description {
     font-size: 2vh;
     margin-top: 2vh;
 }
@@ -394,46 +392,30 @@ span{
     margin-left: 3vh;
     margin-top: 3vh;
 }
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+/* end shop section */
 
 /* media querry */
 @media (max-width:280px){
     #nav-toggle {
-        display: none;
+        display: block;
+      }
+      .navigation {
+        margin-left: 5vh;
+        height: 2vh;
       }
     
-      .navigation {
+      .navigation li{
         display: flex;
+        font-size: 1vh;
+        margin-left: 1vh;
+        margin-right: 0 ;
+        padding-top:  0;
+
       }
+      #nav-toggle {
+          display: none;
+        }
+      
     
     .logo img {
         width: 20vh;
@@ -523,20 +505,49 @@ span{
     margin-top: 5vh;
     margin-left: 2vh;
 }
+.stock{
+    display: block;
+  }
+  .stock .title h4{
+    width: 40vh;
+    font-size: 4vh;
+    margin-left: 5vh;
+  }
+  #list {
+    width: 60vh;
+  }
+  #picture {
+    width: 45vh;
+    margin-top: 3vh;
+
+  }
+  .des{
+    width: 45vh;
+    margin-left: 2vh;
+    margin-top: 3vh;
+  }
 }
-   
-
-
-
-
 @media (max-width:360px){
-    #nav-toggle {
-        display: none;
+      #nav-toggle {
+        display: block;
+      }
+      .navigation {
+        margin-left: 5vh;
+        height: 2vh;
       }
     
-      .navigation {
+      .navigation li{
         display: flex;
+        font-size: 1vh;
+        margin-left: 1vh;
+        margin-right: 0 ;
+        padding-top:  0;
+
       }
+      #nav-toggle {
+          display: none;
+        }
+      
     
     .logo img {
         width: 20vh;
@@ -654,29 +665,38 @@ span{
   #picture {
     width: 45vh;
     margin-top: 3vh;
-    
+
+  }
+  .des{
+    width: 45vh;
+    margin-left: 2vh;
+    margin-top: 3vh;
   }
 
   
  
 }
-
-
-
-
-
-
-
-
 @media (max-width:390px){
-    #nav-toggle {
-        display: none;
+      #nav-toggle {
+        display: block;
       }
-    
       .navigation {
-        display: flex;
+        margin-left: 5vh;
+        height: 2vh;
       }
     
+      .navigation li{
+        display: flex;
+        font-size: 1vh;
+        margin-left: 1vh;
+        margin-right: 0 ;
+        padding-top:  0;
+
+      }
+      #nav-toggle {
+          display: none;
+        }
+      
     .logo img {
         width: 20vh;
         margin-left: .4vh;
@@ -765,19 +785,51 @@ span{
     margin-top: 5vh;
     margin-left: 2vh;
 }
+.stock{
+    display: block;
+  }
+  .stock .title h4{
+    width: 30vh;
+    font-size: 4vh;
+    margin-left: 5vh;
+  }
+  #list {
+    width: 60vh;
+  }
+  #picture {
+    width: 0vh;
+    margin-top: 3vh;
+
+  }
+  .des{
+    width: 45vh;
+    margin-left: 2vh;
+    margin-top: 3vh;
+  }
 }
-    
-    
-
-
 @media (max-width:412px){
-    #nav-toggle {
-        display: none;
+    
+      #nav-toggle {
+        display: block;
+      }
+      .navigation {
+        margin-left: 5vh;
+        height: 2vh;
       }
     
-      .navigation {
+      .navigation li{
         display: flex;
+        font-size: 1vh;
+        margin-left: 1vh;
+        margin-right: 0 ;
+        padding-top:  0;
+
       }
+      #nav-toggle {
+          display: none;
+        }
+      
+      
     
     .logo img {
         width: 20vh;
@@ -867,18 +919,50 @@ span{
     margin-top: 5vh;
     margin-left: 2vh;
 }
+.stock{
+    display: block;
+  }
+  .stock .title h4{
+    width: 40vh;
+    font-size: 4vh;
+    margin-left: 5vh;
+  }
+  #list {
+    width: 60vh;
+  }
+  #picture {
+    width: 45vh;
+    margin-top: 3vh;
+
+  }
+  .des{
+    width: 45vh;
+    margin-left: 2vh;
+    margin-top: 3vh;
+  }
+
 }
-    
-
-
 @media (max-width:414px){
     #nav-toggle {
-        display: none;
+        display: block;
+      }
+      .navigation {
+        margin-left: 5vh;
+        height: 2vh;
       }
     
-      .navigation {
+      .navigation li{
         display: flex;
+        font-size: 1vh;
+        margin-left: 1vh;
+        margin-right: 0 ;
+        padding-top:  0;
+
       }
+      #nav-toggle {
+          display: none;
+        }
+      
     
     .logo img {
         width: 20vh;
@@ -968,19 +1052,49 @@ span{
     margin-top: 5vh;
     margin-left: 2vh;
 }
+.stock{
+    display: block;
+  }
+  .stock .title h4{
+    width: 40vh;
+    font-size: 4vh;
+    margin-left: 5vh;
+  }
+  #list {
+    width: 60vh;
+  }
+  #picture {
+    width: 45vh;
+    margin-top: 3vh;
+
+  }
+  .des{
+    width: 45vh;
+    margin-left: 2vh;
+    margin-top: 3vh;
+  }
 }
-    
-
-
 @media (max-width:430px){
     #nav-toggle {
-        display: none;
+        display: block;
       }
-    
       .navigation {
-        display: flex;
+        margin-left: 5vh;
+        height: 2vh;
       }
     
+      .navigation li{
+        display: flex;
+        font-size: 1vh;
+        margin-left: 1vh;
+        margin-right: 0 ;
+        padding-top:  0;
+
+      }
+      #nav-toggle {
+          display: none;
+        }
+      
     .logo img {
         width: 20vh;
         margin-left: .4vh;
@@ -1070,6 +1184,27 @@ span{
     margin-top: 5vh;
     margin-left: 2vh;
 }
+.stock{
+    display: block;
+  }
+  .stock .title h4{
+    width: 40vh;
+    font-size: 4vh;
+    margin-left: 5vh;
+  }
+  #list {
+    width: 60vh;
+  }
+  #picture {
+    width: 45vh;
+    margin-top: 3vh;
+
+  }
+  .des{
+    width: 45vh;
+    margin-left: 2vh;
+    margin-top: 3vh;
+  }
 }
 @media (min-width: 768px) {
     #nav-toggle {
@@ -1088,14 +1223,14 @@ span{
       }
     
    
-    }
-
+}
 @media (width:820px){
     #nav-toggle {
         display: none;
       }
     
       .navigation {
+        margin-left: 5vh;
         display: flex;
       }
     
@@ -1188,10 +1323,28 @@ span{
     margin-top: 5vh;
     margin-left: 2vh;
 }
+.stock{
+    display: block;
+  }
+  .stock .title h4{
+    width: 40vh;
+    font-size: 4vh;
+    margin-left: 5vh;
+  }
+  #list {
+    width: 60vh;
+  }
+  #picture {
+    width: 45vh;
+    margin-top: 3vh;
+
+  }
+  .des{
+    width: 45vh;
+    margin-left: 2vh;
+    margin-top: 3vh;
+  }
 }
-    
-
-
 @media (width:853px){
     .logo img {
         width: 20vh;
@@ -1282,11 +1435,29 @@ span{
     margin-top: 5vh;
     margin-left: 2vh;
 }
+.stock{
+    display: block;
+  }
+  .stock .title h4{
+    width: 40vh;
+    font-size: 4vh;
+    margin-left: 5vh;
+  }
+  #list {
+    width: 60vh;
+  }
+  #picture {
+    width: 45vh;
+    margin-top: 3vh;
+
+  }
+  .des{
+    width: 45vh;
+    margin-left: 2vh;
+    margin-top: 3vh;
+  }
 
 }
-    
-
-
 @media (width:1024px){
     .logo img {
         width: 20vh;
@@ -1378,9 +1549,27 @@ span{
     margin-top: 5vh;
     margin-left: 2vh;
 }
+.stock{
+    display: block;
+  }
+  .stock .title h4{
+    width: 40vh;
+    font-size: 4vh;
+    margin-left: 5vh;
+  }
+  #list {
+    width: 75vh;
+  }
+  #picture {
+    width: 60vh;
+    margin-top: 3vh;
+    margin-left: 4vh;
+
+  }
+  .des{
+    width: 60vh;
+    margin-left: 4vh;
+    margin-top: 3vh;
+  }
 }
-    
-
-
-
 /* media querry */
