--- a/css/style.css
+++ b/css/style.css
@@ -73,7 +73,10 @@ span{
   #nav-toggle[aria-expanded="true"] .icon-bar:last-child {
     transform: translateY(-10px) rotate(-45deg);
   }
-  
+
+  #nav-toggle{
+    display: none;
+  }
   
   
   .navigation li {
@@ -511,6 +514,44 @@ span{
     margin-left: 2vh;
     margin-top: 3vh;
   }
+  #nav-toggle {
+    cursor: pointer;
+    border: none;
+    background-color: transparent;
+    width: 40px;
+    height: 40px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+  }
+  
+  #nav-toggle:focus {
+    outline: none;
+  }
+  
+  .icon-bar {
+    display: block;
+    width: 25px;
+    height: 4px;
+    background-color: black;
+    transition: transform 0.3s ease-out;
+  }
+  
+  #nav-toggle[aria-expanded="true"] .icon-bar:nth-child(2) {
+    opacity: 0;
+  }
+  
+  #nav-toggle[aria-expanded="true"] .icon-bar:first-child {
+    transform: translateY(10px) rotate(45deg);
+  }
+  
+  #nav-toggle[aria-expanded="true"] .icon-bar:last-child {
+    transform: translateY(-10px) rotate(-45deg);
+  }
+  .navigation{
+    display: none;
+  }
+  
 }
 @media (max-width:360px){
      
@@ -624,6 +665,44 @@ span{
     margin-left: 2vh;
     margin-top: 3vh;
   }
+  #nav-toggle {
+    cursor: pointer;
+    border: none;
+    background-color: transparent;
+    width: 40px;
+    height: 40px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+  }
+  
+  #nav-toggle:focus {
+    outline: none;
+  }
+  
+  .icon-bar {
+    display: block;
+    width: 25px;
+    height: 4px;
+    background-color: black;
+    transition: transform 0.3s ease-out;
+  }
+  
+  #nav-toggle[aria-expanded="true"] .icon-bar:nth-child(2) {
+    opacity: 0;
+  }
+  
+  #nav-toggle[aria-expanded="true"] .icon-bar:first-child {
+    transform: translateY(10px) rotate(45deg);
+  }
+  
+  #nav-toggle[aria-expanded="true"] .icon-bar:last-child {
+    transform: translateY(-10px) rotate(-45deg);
+  }
+  .navigation{
+    display: none;
+  }
+  
 
   
  
@@ -738,6 +817,45 @@ span{
     margin-left: 2vh;
     margin-top: 3vh;
   }
+  #nav-toggle {
+    cursor: pointer;
+    border: none;
+    background-color: transparent;
+    width: 40px;
+    height: 40px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+  }
+  
+  #nav-toggle:focus {
+    outline: none;
+  }
+  
+  .icon-bar {
+    display: block;
+    width: 25px;
+    height: 4px;
+    background-color: black;
+    transition: transform 0.3s ease-out;
+  }
+  
+  #nav-toggle[aria-expanded="true"] .icon-bar:nth-child(2) {
+    opacity: 0;
+  }
+  
+  #nav-toggle[aria-expanded="true"] .icon-bar:first-child {
+    transform: translateY(10px) rotate(45deg);
+  }
+  
+  #nav-toggle[aria-expanded="true"] .icon-bar:last-child {
+    transform: translateY(-10px) rotate(-45deg);
+  }
+  .navigation{
+    display: none;
+  }
+  
+  
 }
 @media (max-width:412px){
     
@@ -850,6 +968,44 @@ span{
     margin-left: 2vh;
     margin-top: 3vh;
   }
+  #nav-toggle {
+    cursor: pointer;
+    border: none;
+    background-color: transparent;
+    width: 40px;
+    height: 40px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+  }
+  
+  #nav-toggle:focus {
+    outline: none;
+  }
+  
+  .icon-bar {
+    display: block;
+    width: 25px;
+    height: 4px;
+    background-color: black;
+    transition: transform 0.3s ease-out;
+  }
+  
+  #nav-toggle[aria-expanded="true"] .icon-bar:nth-child(2) {
+    opacity: 0;
+  }
+  
+  #nav-toggle[aria-expanded="true"] .icon-bar:first-child {
+    transform: translateY(10px) rotate(45deg);
+  }
+  
+  #nav-toggle[aria-expanded="true"] .icon-bar:last-child {
+    transform: translateY(-10px) rotate(-45deg);
+  }
+  .navigation{
+    display: none;
+  }
+  
 
 }
 @media (max-width:414px){
@@ -962,6 +1118,44 @@ span{
     margin-left: 2vh;
     margin-top: 3vh;
   }
+  #nav-toggle {
+    cursor: pointer;
+    border: none;
+    background-color: transparent;
+    width: 40px;
+    height: 40px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+  }
+  
+  #nav-toggle:focus {
+    outline: none;
+  }
+  
+  .icon-bar {
+    display: block;
+    width: 25px;
+    height: 4px;
+    background-color: black;
+    transition: transform 0.3s ease-out;
+  }
+  
+  #nav-toggle[aria-expanded="true"] .icon-bar:nth-child(2) {
+    opacity: 0;
+  }
+  
+  #nav-toggle[aria-expanded="true"] .icon-bar:first-child {
+    transform: translateY(10px) rotate(45deg);
+  }
+  
+  #nav-toggle[aria-expanded="true"] .icon-bar:last-child {
+    transform: translateY(-10px) rotate(-45deg);
+  }
+  .navigation{
+    display: none;
+  }
+  
 }
 @media (max-width:430px){    
     .logo img {
@@ -1074,6 +1268,44 @@ span{
     margin-left: 2vh;
     margin-top: 3vh;
   }
+  #nav-toggle {
+    cursor: pointer;
+    border: none;
+    background-color: transparent;
+    width: 40px;
+    height: 40px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+  }
+  
+  #nav-toggle:focus {
+    outline: none;
+  }
+  
+  .icon-bar {
+    display: block;
+    width: 25px;
+    height: 4px;
+    background-color: black;
+    transition: transform 0.3s ease-out;
+  }
+  
+  #nav-toggle[aria-expanded="true"] .icon-bar:nth-child(2) {
+    opacity: 0;
+  }
+  
+  #nav-toggle[aria-expanded="true"] .icon-bar:first-child {
+    transform: translateY(10px) rotate(45deg);
+  }
+  
+  #nav-toggle[aria-expanded="true"] .icon-bar:last-child {
+    transform: translateY(-10px) rotate(-45deg);
+  }
+  .navigation{
+    display: none;
+  }
+  
 }
 
    
@@ -1186,6 +1418,45 @@ span{
     margin-left: 2vh;
     margin-top: 3vh;
   }
+  #nav-toggle {
+    cursor: pointer;
+    border: none;
+    background-color: transparent;
+    width: 40px;
+    height: 40px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+  }
+  
+  #nav-toggle:focus {
+    outline: none;
+  }
+  
+  .icon-bar {
+    display: block;
+    width: 25px;
+    height: 4px;
+    background-color: black;
+    transition: transform 0.3s ease-out;
+  }
+  
+  #nav-toggle[aria-expanded="true"] .icon-bar:nth-child(2) {
+    opacity: 0;
+  }
+  
+  #nav-toggle[aria-expanded="true"] .icon-bar:first-child {
+    transform: translateY(10px) rotate(45deg);
+  }
+  
+  #nav-toggle[aria-expanded="true"] .icon-bar:last-child {
+    transform: translateY(-10px) rotate(-45deg);
+  }
+  .navigation{
+    display: none;
+  }
+
+  
 }
 
 @media (width:768px){
@@ -1296,6 +1567,44 @@ span{
       margin-left: 2vh;
       margin-top: 3vh;
     }
+    #nav-toggle {
+        cursor: pointer;
+        border: none;
+        background-color: transparent;
+        width: 40px;
+        height: 40px;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-around;
+      }
+      
+      #nav-toggle:focus {
+        outline: none;
+      }
+      
+      .icon-bar {
+        display: block;
+        width: 25px;
+        height: 4px;
+        background-color: black;
+        transition: transform 0.3s ease-out;
+      }
+      
+      #nav-toggle[aria-expanded="true"] .icon-bar:nth-child(2) {
+        opacity: 0;
+      }
+      
+      #nav-toggle[aria-expanded="true"] .icon-bar:first-child {
+        transform: translateY(10px) rotate(45deg);
+      }
+      
+      #nav-toggle[aria-expanded="true"] .icon-bar:last-child {
+        transform: translateY(-10px) rotate(-45deg);
+      }
+      .navigation{
+        display: none;
+      }
+      
   }
 @media (width:853px){
     .logo img {
@@ -1408,6 +1717,44 @@ span{
     margin-left: 2vh;
     margin-top: 3vh;
   }
+  #nav-toggle {
+    cursor: pointer;
+    border: none;
+    background-color: transparent;
+    width: 40px;
+    height: 40px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+  }
+  
+  #nav-toggle:focus {
+    outline: none;
+  }
+  
+  .icon-bar {
+    display: block;
+    width: 25px;
+    height: 4px;
+    background-color: black;
+    transition: transform 0.3s ease-out;
+  }
+  
+  #nav-toggle[aria-expanded="true"] .icon-bar:nth-child(2) {
+    opacity: 0;
+  }
+  
+  #nav-toggle[aria-expanded="true"] .icon-bar:first-child {
+    transform: translateY(10px) rotate(45deg);
+  }
+  
+  #nav-toggle[aria-expanded="true"] .icon-bar:last-child {
+    transform: translateY(-10px) rotate(-45deg);
+  }
+  .navigation{
+    display: none;
+  }
+  
 
 }
 @media (width:1024px){
@@ -1523,5 +1870,43 @@ span{
     margin-left: 4vh;
     margin-top: 3vh;
   }
+  #nav-toggle {
+    cursor: pointer;
+    border: none;
+    background-color: transparent;
+    width: 40px;
+    height: 40px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+  }
+  
+  #nav-toggle:focus {
+    outline: none;
+  }
+  
+  .icon-bar {
+    display: block;
+    width: 25px;
+    height: 4px;
+    background-color: black;
+    transition: transform 0.3s ease-out;
+  }
+  
+  #nav-toggle[aria-expanded="true"] .icon-bar:nth-child(2) {
+    opacity: 0;
+  }
+  
+  #nav-toggle[aria-expanded="true"] .icon-bar:first-child {
+    transform: translateY(10px) rotate(45deg);
+  }
+  
+  #nav-toggle[aria-expanded="true"] .icon-bar:last-child {
+    transform: translateY(-10px) rotate(-45deg);
+  }
+  .navigation{
+    display: none;
+  }
+  
 }
 /* media querry */
